settings: Show more hardware information about the device
* This is a lazy implementation someday be dynamic

* Pulls the following build.prop settings and displays them

  ro.device.chipset=value
  ro.device.cpu_info=value
  re.device.gpu=value
  ro.device.front_cam=value
  ro.device.rear_cam=value
  ro.device.screen_res=value

Change-Id: I5da59cac0e924953679f7a69ba17cb8df7b59a91
Signed-off-by: José Adolfo Galdámez <josegalre@pac-rom.com>

--- a/res/values/arc_strings.xml
+++ b/res/values/arc_strings.xml
@@ -5,9 +5,17 @@
     <string name="arc_version">ARC version</string>
     <string name="arc_version_default">Unknown</string>
 
-    <!-- CPU and RAM info -->
-    <string name="cpu_info">CPU</string>
+    <!-- Hardware information -->
     <string name="mem_info">RAM</string>
+    <string name="gpu_info">GPU</string>
+    <string name="cpu_info">CPU</string>
+    <string name="cpu_type">CPU type</string>
+    <string name="hardware_info">Hardware information</string>
+    <string name="device_chipset">Chipset</string>
+    <string name="device_codename">Device codename</string>
+    <string name="device_rear_camera">Rear camera</string>
+    <string name="device_front_camera">Front facing camera</string>
+    <string name="device_screen_resolution">Screen resolution</string>
 
     <!-- SuperSU -->
     <string name="supersu_title">SuperSU</string>
