AppOps: Add more operations in app ops settings.
Add following operations in app ops settings.

-- Wifi enable/disable
-- Bluetooth enable/disable

Change-Id: I32183d77b88c326168557444a445765b5a69de6f

AppOps: Add support for nfc operation

Add support for nfc operation

Change-Id: I0ca617b11d3f65f80cc49c3f629312e2fee1ba91

AppOps: Add mobile data-on permission control.

Add mobile data-on permission control.

Change-Id: I0956fb1575addb5f4e522e664a80442120190b86

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -686,6 +686,7 @@
         <item>monitor high power location</item>
         <item>get usage stats</item>
         <item>mute/unmute microphone</item>
+        <item>toast window</item>
         <item>project media</item>
         <item>activate VPN</item>
         <item>write wallpaper</item>
@@ -703,7 +704,7 @@
         <item>write external storage</item>
         <item>turn screen on</item>
         <item>get accounts</item>
-        <item>change wifi</item>
+        <item>toggle wi-fi</item>
         <item>toggle bluetooth</item>
         <item>start at boot</item>
         <item>toggle nfc</item>
