Settings: Forward port long-press-back to kill app (1/2)
PS4: Switch instead of Checkbox

Change-Id: I60f4b95eb9cc2ef6cf73a5f9317bca066e6bb901

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -697,4 +697,9 @@
     <string name="expanded_desktop_style">Expanded desktop style</string>
     <string name="expanded_desktop_style_description">Choose a default expanded desktop style</string>
     <string name="expanded_desktop_title">Expanded desktop options</string>
+
+    <!-- Kill app long-press back -->
+    <string name="kill_app_longpress_back">Kill app back button</string>
+    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back button</string>
+
 </resources>
