settings: Add CPU & RAM info
From Original Commit change Memory --> RAM

Change-Id: I0cce559c86321827d6f920d61ad9dfcb34a63b3c

--- a/res/values/arc_strings.xml
+++ b/res/values/arc_strings.xml
@@ -5,4 +5,8 @@
     <string name="arc_version">ARC version</string>
     <string name="arc_version_default">Unknown</string>
 
+    <!-- CPU and RAM info -->
+    <string name="cpu_info">CPU</string>
+    <string name="mem_info">RAM</string>
+
 </resources>
