settings: add arc version
Change-Id: If5287438de0c447cae2a2f29cefa7570e6cee494
Signed-off-by: José Adolfo Galdámez <josegalre@pac-rom.com>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -77,6 +77,12 @@
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
 
+        <!-- ARC version -->
+        <Preference android:key="arc_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/arc_version"
+                android:summary="@string/arc_version_default" />
+
         <!-- Mod version -->
         <Preference android:key="mod_version"
                 style="?android:preferenceInformationStyle"
