Settings: long press back to kill configurable timeout [2/2]
Forward ported from crDroid sources: https://github.com/crdroidandroid/android_packages_apps_Settings/commit/2cbe1c7e6f81096a85041e7596d7eff258f4f8c9

Change-Id: I35e2bcd0dd7a0ca36945933b21169866d98bba37

--- a/res/values/arc_strings.xml
+++ b/res/values/arc_strings.xml
@@ -17,6 +17,13 @@
     <string name="device_front_camera">Front facing camera</string>
     <string name="device_screen_resolution">Screen resolution</string>
 
+    <!-- long press back to kill configurable timeout -->
+    <string name="kill_app_longpress_timeout_title">Long press back button timeout</string>
+    <string name="timeout_2000">2 seconds (default)</string>
+    <string name="timeout_1500">1,5 seconds</string>
+    <string name="timeout_1000">1 second</string>
+    <string name="timeout_500">0,5 second</string>
+
     <!-- SuperSU -->
     <string name="supersu_title">SuperSU</string>
 
