Settings: update layouts
Settings: update layouts
- User materialish oval shapes instead of rectangles
- Rearrange notifications, wireless, display and sound entries
- Update some strings

Signed-off-by: jrizzoli <joey@cyanogenmoditalia.it>

Settings: update control ring stream string
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>

WirelessSettings: Remove NFC category if there's no NFC adapter

+ Settings: add mobile network entry to dashboard

Change-Id: I3fcd758f77a217e5c37a22f4d797398a7613b5a2
Signed-off-by: jrizzoli <joey@cyanogenmoditalia.it>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -41,6 +41,9 @@
     <string name="root_access_adb">ADB only</string>
     <string name="root_access_all">Apps and ADB</string>
 
+    <!-- NFC PreferenceCategory title -->
+    <string name="nfc_title_category">NFC</string>
+
     <!-- About phone screen, CyanogenMod version -->
     <string name="mod_version">CyanogenMod version</string>
     <string name="mod_version_default">Unknown</string>
@@ -587,8 +590,9 @@
     <string name="lto_download_data_wifi_only_on">Over any networks</string>
     <string name="lto_download_data_wifi_only_off">Only over Wi\u2011Fi networks</string>
 
-    <string name="volume_keys_control_ring_stream_title">Volume keys control ringtone volume</string>
-    <string name="volume_keys_control_ring_stream_summary">If on, volume keys control ringtone volume. If off, volume keys control media volume.</string>
+    <string name="volume_keys_control_ring_stream_title">Control ringtone volume</string>
+    <string name="volume_keys_control_ring_stream_summary_on">Volume keys control ringtone volume</string>
+    <string name="volume_keys_control_ring_stream_summary_off">Volume keys control media volume</string>
 
     <string name="category_calibration">Calibration</string>
     <string name="display_and_lights">Display &amp; lights</string>
