--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -340,6 +340,17 @@
                 android:targetClass="eu.chainfire.supersu.MainActivity" />
         </dashboard-tile>
 
+        <!-- KernelAdiutor -->
+        <dashboard-tile
+            android:id="@+id/kernel_adiutor"
+            android:icon="@drawable/ic_sysbar_quicksettings"
+            android:title="@string/memory_performance">
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.grarak.kerneladiutor"
+                android:targetClass="com.grarak.kerneladiutor.MainActivity" />
+        </dashboard-tile>
+
         <!-- Development -->
         <dashboard-tile
                 android:id="@+id/development_settings"
